Should morale damage upon contact be high or low?

--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -102,7 +102,7 @@
 \item{Ламенарна броня, подплатена с гамбезон 9}
 \item{Лята броня, подплатена с гамбезон(средновековен дизайн - субоптимална форма, субоптимална стомана, примитивно закаляване, подвижност в ставите се осигурява от халчести участъци) 12}
 \item{Лята броня, подплатена с гамбезон(ренесансов дизайн - скосени повърхности, качествена стомана (high toughness core),  интелигентно закаляване на повърхностния слой(hardened shell), сложни механични стави) 15}
-Теглата на копонентите клонят към една десета от произведенито на покритието и здравината си.
+Масата на конпонент клони към една десета от произведенито на покритието и здравината му за средно качество изработка.
 \end{itemize}
 
 \subsection{Механика}
@@ -203,7 +203,7 @@
 \end{itemize}
 
 \subsubsection{Правила}
-Ръкопашен бой + д6* с/у броня. Ако нападащият строй спечели, лицето на строят му се нанася 1/2 като убити и 1/2 като ранени върху противника. Разликата в хвърлянето се нанася върху моралът на противника.
+Ръкопашен бой + д6* с/у броня. Ако нападащият строй спечели, лицето на строят му се нанася 1/2 като убити и 1/2 като ранени върху противника. Разликата в хвърлянето се нанася върху моралът на противника / противника губи 1 точка морал (\textit{кое е по-добро?}).
 
 Директна стрелба (под 1 инкремент на оръжието) следва правилата за ръкопашен бой. Стрелба до максималното разстояние на хвърляне на оръжието е на половина.
 
@@ -215,7 +215,7 @@
 
 Морал. При виждане на разбиване на приятелски сторй, или ако бягащ разбит строй премине през позициите на друг строй, морал се намаля с 1.
 
-При морал 0, строят се разбира и се превръща в тълпа.
+При морал 0, строят се разбива и се превръща в тълпа.
 
 Войници не в строй (а в тълпа) търпят наказание на всичко от -5.
 
