Weapons list made verbatim. TODO: two-column pages.

--- a/latex/items_skills_perks.tex
+++ b/latex/items_skills_perks.tex
@@ -1,4 +1,5 @@
 \section{Списък с оръжия}
+\begin{verbatim}
 Нож
 Сила: 3-9
 Обсег: близък
@@ -68,6 +69,7 @@
 Щети: високи
 Свойства: бронебойност
 Тегло: 4кг
+\end{verbatim}
 
 \section{Умения}
 \subsection{Общуване}
