Table of items with preices. TODO: separate into setting book.

--- a/latex/items_skills_perks.tex
+++ b/latex/items_skills_perks.tex
@@ -1,4 +1,15 @@
-\section{Списък с оръжия}
+\section{Предмети}
+\subsection{Валути}
+\subsection{Заплащане}
+\subsection{Сгради}
+\rowcolors{1}{white}{gray}
+\begin{tabular}{p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm}}
+мн. евтин & евтин                                   & среден                  & скъп                           & мн. скъп  \\
+щит       & меч                                     & двуръчен меч            & имение                         &           \\
+брадва    & халчеста къса ризница пазаене 6 здр. 6  & боен кон                & пълна броня пазаене 15 здр. 15 &           \\
+          & нагръдник пазене 3 здр. 12              & кираса пазене 5 здр. 15 &                                & замък
+\end{tabular}
+\subsection{Оръжия}
 \begin{verbatim}
 Нож
 Сила: 3-9
