Package multicols is needed for multiple columns on selected pages.

--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -7,6 +7,7 @@
 \usepackage[pdftex]{graphicx}
 \usepackage[table]{xcolor}     % For coloured rows within tables.
 \usepackage{fullpage}          % Set left and right margin to 1 inch - much less than the default.
+%\usepackage{multicols}
 
 % Commands.
 % \newcommand{name}[num]{definition}
