--- a/latex/items_skills_perks.tex
+++ b/latex/items_skills_perks.tex
@@ -10,6 +10,7 @@
           & нагръдник пазене 3 здр. 12              & кираса пазене 5 здр. 15 &                                & замък
 \end{tabular}
 \subsection{Оръжия}
+%\begin{multicols}{2}
 \begin{verbatim}
 Нож
 Сила: 3-9
@@ -81,6 +82,7 @@
 Свойства: бронебойност
 Тегло: 4кг
 \end{verbatim}
+%\end{multicols}
 
 \section{Умения}
 \subsection{Общуване}
