Time ticks added, organized as a table of examples.

--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -18,6 +18,14 @@
 %TODO: add a brief introduction
 
 \subsection{Тактове време}
+\rowcolors{1}{white}{gray}
+\begin{tabular}{c | c}
+Ръкопашна (1)       & Престрелка (10)                      \\   % TODO: add longer time scales here
+ръкопашна атака     & сблъсък на строеве                   \\
+зареждане на стрела & топовен залп, требучет или катапулт  \\
+                    & престрелка с дебненe
+\end{tabular}
+
 \subsection{Ръкопашни дистанции}
 \begin{enumerate}
 \item{директна (борба)}
