lightgray instead of gray, intended to be more readable on paper.

--- a/latex/character_creation_and_evolution.tex
+++ b/latex/character_creation_and_evolution.tex
@@ -33,7 +33,7 @@
 Повишаване на умение на повече рангове,  отколкото е показателят, струва по две точки за всеки ранг на умението.
 
 \subsection{Носене}
-\rowcolors{1}{white}{gray}
+\rowcolors{1}{white}{lightgray}
 \begin{tabular}{l | l | l }
 Максимален товар, кг & Придвижване, м            & Наказание  \\
 Сила                 & Сила + Ловкост + Ловкост  & -0         \\
