--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -18,7 +18,7 @@
 %TODO: add a brief introduction
 
 \subsection{Тактове време}
-\rowcolors{1}{white}{gray}
+\rowcolors{1}{white}{lightgray}
 \begin{tabular}{c | c}
 Ръкопашна (1)       & Престрелка (10)                      \\   % TODO: add longer time scales here
 ръкопашна атака     & сблъсък на строеве                   \\
@@ -152,7 +152,7 @@
 \end{itemize}
 
 \subsection{Таблица щети}
-\rowcolors{1}{white}{gray}
+\rowcolors{1}{white}{lightgray}
 \begin{tabular}{l | c | c | c}
 Сила & *1/2 & *2/3 & *1  \\
 1  & d-3  & d-3  & d-2   \\
