--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -21,6 +21,7 @@
 \newcommand{\firstletter}{}  % Old book style huge, gorgeous first letter of the chapter.
 \newcommand{\mychapter}{}  % A subsection title with an optional accompaning image.
 \newcommand{\smallrules}{}  % Under a small heading, list consicely several unrelated rules (paragraphs).
+% \newcommand{\alternateTableRowColor}{{\rowcolors}{1}{white}{lightgray}}  TODO: how to make this work?
 
 % Document body.
 \begin{document}
