--- a/latex/items_skills_perks.tex
+++ b/latex/items_skills_perks.tex
@@ -2,7 +2,7 @@
 \subsection{Валути}
 \subsection{Заплащане}
 \subsection{Сгради}
-\rowcolors{1}{white}{gray}
+\rowcolors{1}{white}{lightgray}
 \begin{tabular}{p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm}}
 мн. евтин & евтин                                   & среден                  & скъп                           & мн. скъп  \\
 щит       & меч                                     & двуръчен меч            & имение                         &           \\
