Skills section summarized and separated with headings.

--- a/latex/character_creation_and_evolution.tex
+++ b/latex/character_creation_and_evolution.tex
@@ -22,12 +22,13 @@
 \end{itemize}
 
 \subsection{Умения}
-“Умение” наричаме практическо познание да се върши нещо, като придобиване на работно(професионално) ниво на умелост изисква няколко години.
+Начални точки и развиване  \\
+Отново с 30 точки разполагаш, за да разпределиш по умения.
+Уменията, също така, се повишават с точки опит по време на игра.
+\\
+\\
+Ниво на владеене  \\
 Нивото на владеене на всяко умение се оценява по скала от 0 до 15, като 15 е специална стойност.
-При създаване на персонаж разполагаш с 30 точки, които да разпределиш по всичко, което твоят храбър Иван/Георги е научил в живота си до сега.
-Можете да слагаш до 10 точки на конкретно умение.
-Умеията могат да се развиват през време на играта с точки опит.
-Обаче никое умение не може да бъде повишавано над 14 точки, освен при много особени обстоятелства.
 Всяко умение е базирано върху някой показател.
 Половината от показателя (закръглено надолу) се добавя към ранговете на умението, когато то се ползва.
 Повишаване на умение на повече рангове,  отколкото е показателят, струва по две точки за всеки ранг на умението.
