All fonts added. Default font changed for good.

--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -2,8 +2,22 @@
 
 % Packages.
 % \usepackage[options]{names,comma,separated}
+\usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[bulgarian]{babel}
+
+% Fonts listing. Exactly one must be selected.
+% List all fonts with "locate /t2a | grep 'texlive/texmf-dist/tex/latex/.*\.fd$'".
+% \usepackage{antt}      % Doesn't work.
+% \usepackage{cantarell}
+% \usepackage{cm-lgc}    % Doesn't work.
+% \usepackage{comfortaa}
+% \usepackage{cyrillic}  % Doesn't work.
+% \usepackage{droid}
+\usepackage{iwona}
+% \usepackage{kurier}
+% \usepackage{opensans}
+
 \usepackage[pdftex]{graphicx}
 \usepackage[table]{xcolor}     % For coloured rows within tables.
 \usepackage{fullpage}          % Set left and right margin to 1 inch - much less than the default.
