Using package multicol is fun.

--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -27,6 +27,7 @@
 \end{tabular}
 
 \subsection{Ръкопашни дистанции}
+\begin{multicols}{2}
 \begin{enumerate}
 \item{директна (борба)}
 \item{близка (нож, невъоръжен, къс меч)}
@@ -39,7 +40,7 @@
 Извън оптималната си дистанция, оръжията са на -5 атака и половин щети.
 Придвижване между дистанции се извършва след успешно хвърляне (независимо нападение или защита).
 Придвижването е или една категория в произволна посока или произволен брой категории, без да се преминава през заплашвани от някой враг дистанции. 
-
+\end{multicols}
 Пример:
 \emph{Пешо, с копие и нож, напада Жоро, с меч.
 Пешо връхлита и напада с копието.
@@ -152,6 +153,7 @@
 \end{itemize}
 
 \subsection{Таблица щети}
+\begin{multicols}{2}
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{l | c | c | c}
 Сила & *1/2 & *2/3 & *1  \\
@@ -209,7 +211,7 @@
 \item{Стрелба - Сила + най-високото боравене с налично далечно оръжие}
 \item{Броня - Сила + (1/10)сума(пазене * здравина), без щитове}
 \end{itemize}
-
+\end{multicols}
 \subsubsection{Правила}
 Ръкопашен бой + д6* с/у броня. Ако нападащият строй спечели, лицето на строят му се нанася 1/2 като убити и 1/2 като ранени върху противника. Разликата в хвърлянето се нанася върху моралът на противника / противника губи 1 точка морал (\textit{кое е по-добро?}).
 
