Added lists of spells, items, perks.

--- a/latex/character_creation_and_evolution.tex
+++ b/latex/character_creation_and_evolution.tex
@@ -13,7 +13,7 @@
 Или до {\bfоще три}, като за всяко допълнително “хубаво” качество, си харесваме по едно “лошо”. Стига се цупи де, лошите качества са крайно забавни за разиграване!
 
 \subsection{Показатели}
-Разполагаш с 30 точки, които да разпределиш по показателите. Те се променят рядко.
+Разполагаш с \textbf{30 точки}, които да разпределиш по показателите. Те се променят рядко.
 \begin{itemize}
 \item {\bfСила} – телосложение, експлозивна сила, статична сила, умение да се концентрира силата на тялото, имунна система
 \item {\bfЛовкост} – както пъргавина и гъвкавост на цялото тяло, скорост, така и прецизност във фините задачи
@@ -23,7 +23,7 @@
 
 \subsection{Умения}
 Начални точки и развиване  \\
-Отново с 30 точки разполагаш, за да разпределиш по умения.
+С \textit{Ум * 5} разполагаш, за да разпределиш по умения.
 Уменията, също така, се повишават с точки опит по време на игра.
 \\
 \\
