--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -51,7 +51,11 @@
 }
 
 \subsection{Стрелба}
-Защитата на движеща се цел се равнява на нейната ловкост.
+Защитата на движеща се цел се равнява на нейната ловкост.  \\
+След преминаване оптималния обсег на оръжието, -5 атака.  \\
+Това наказание се натрупва до стигане максилния обсег на оръжието.  \\
+Прицелване повишава атаката с по една точка на ход.  \\
+Прицелване в рамките на максимум <базов показател на умението> хода.
 
 \subsection{Оръжия}
 \begin{itemize}
@@ -74,12 +78,12 @@
 
 Също така, оръжията могат да имат някои от следните свойства.
 \begin{enumerate}
-\item{повратливост (обикновено мечове; покрива всички по-близки дистанции от максимлната)}
-\item{бронебойност I (чукове или леки клинове, като стрели и копия; намаля абсорбацията на половина)}
-\item{бронебойност II (клиновидни, тежки остриета; намаля абсорбацията на $\frac1 4$)}
-\item{трудно за вадене (не може да се извади от пробита проня по време на битка; не може да се извади от небронирана плът, ако зарът за щета е бил положителен; при вадене лечитеслтво с/у щетите; ако не успее се  нанасят още толкова щети, колкото първоначално)}
-\item{поваляне (обикновено алебарди; наместо щети, атаката може да бъде обявена, че поваля опонента. Ако целта е конник в качествено бойно седло, -5 на атака)}
-\item{обезоръжаване (обикновено меч или щит; при успешна защита има шанс оръжието на врага да е уловено в комплексния гард или шипове на "бос"a на щит)}
+\item{\textbf{повратливост} (обикновено мечове; покрива всички по-близки дистанции от максимлната)}
+\item{\textbf{бронебойност I} (чукове или леки клинове, като стрели и копия; намаля абсорбацията на половина)}
+\item{\textbf{бронебойност II} (клиновидни, тежки остриета; намаля абсорбацията на $\frac1 4$)}
+\item{\textbf{трудно за вадене} (не може да се извади от пробита проня по време на битка; не може да се извади от небронирана плът, ако зарът за щета е бил положителен; при вадене лечитеслтво с/у щетите; ако не успее се  нанасят още толкова щети, колкото първоначално)}
+\item{\textbf{поваляне} (обикновено алебарди; наместо щети, атаката може да бъде обявена, че поваля опонента. Ако целта е конник в качествено бойно седло, -5 на атака)}
+\item{\textbf{обезоръжаване} (обикновено меч или щит; при успешна защита има шанс оръжието на врага да е уловено в комплексния гард или шипове на "бос"a на щит)}
 \end{enumerate}
 
 \subsection{Брони}
@@ -105,12 +109,12 @@
 Общо максимум: 15
 
 Здравина:
-Кожена броня(слоеве памук/хартия/коприна/мека кожа, със зашити плочи варена кожа/хитинова коруба на негъвкавите части) 4
 \begin{itemize}
-\item{Халчеста броня, подплатена с гамбезон 6}
-\item{Ламенарна броня, подплатена с гамбезон 9}
-\item{Лята броня, подплатена с гамбезон(средновековен дизайн - субоптимална форма, субоптимална стомана, примитивно закаляване, подвижност в ставите се осигурява от халчести участъци) 12}
-\item{Лята броня, подплатена с гамбезон(ренесансов дизайн - скосени повърхности, качествена стомана (high toughness core),  интелигентно закаляване на повърхностния слой(hardened shell), сложни механични стави) 15}
+\item{Кожена броня(слоеве памук/хартия/коприна/мека кожа, със зашити плочи варена кожа/хитинова коруба на негъвкавите части) 2}
+\item{Халчеста броня, подплатена с гамбезон 4}
+\item{Ламенарна броня, подплатена с гамбезон 6}
+\item{Лята броня, подплатена с гамбезон(средновековен дизайн - субоптимална форма, субоптимална стомана, примитивно закаляване, подвижност в ставите се осигурява от халчести участъци) 8}
+\item{Лята броня, подплатена с гамбезон(ренесансов дизайн - скосени повърхности, качествена стомана (high toughness core),  интелигентно закаляване на повърхностния слой(hardened shell), сложни механични стави) 10}
 Масата на конпонент клони към една десета от произведенито на покритието и здравината му за средно качество изработка.
 \end{itemize}
 
@@ -144,12 +148,13 @@
 Едното оръжие се ползва за да нанесе щети на врага, нека наречем него първо.
 Второто оръжие може да се ползва за създаване на откриване (което добавя половината боравене в това оръжие към боравенето с основното оръжие) или пък независимо, за пласиране на стопиращи удари (в който случай се ползва независимо, но с наказание -5 на атака).
 Ако се атакува само с едното оръжие няма наказания, разбира се.
+Щитовете не търпят -5 при пазене.
 
 \subsubsection{Щит}
 \begin{itemize}
 \item[-]{Щитът е направен да е второ оръжие. Като такъв не търпи -5 когато се ползва за защита.}
 \item[-]{пазене от стрели 0/6 (бъклър) през 2/6(кръгъл викингски) през 4/6(дълъг римски) до 6/6 (павис). Това когато активно се криеш от стрелите, разбира се.}
-\item[-]{Дървените щитове имат здравина 15, а стоманените 30. Това обикновено няма значерние, но силни или бронебойни атаки може да преодолеят успешно блокиране.}
+\item[-]{Дървените оръжия и щитове имат здравина 15, а стоманените 30. Това обикновено няма значерние, но силни или бронебойни атаки може да преодолеят успешно блокиране.}
 \end{itemize}
 
 \subsection{Таблица щети}
@@ -215,7 +220,7 @@
 \subsubsection{Правила}
 Ръкопашен бой + д6* с/у броня. Ако нападащият строй спечели, лицето на строят му се нанася 1/2 като убити и 1/2 като ранени върху противника. Разликата в хвърлянето се нанася върху моралът на противника / противника губи 1 точка морал (\textit{кое е по-добро?}).
 
-Директна стрелба (под 1 инкремент на оръжието) следва правилата за ръкопашен бой. Стрелба до максималното разстояние на хвърляне на оръжието е на половина.
+Директна стрелба (под 1 инкремент на оръжието) следва правилата за ръкопашен бой. Стрелба до максималното разстояние на хвърляне на оръжието е на половина щета.
 
 Лице и Дълбочина. Един строй може да бъде нападнат едновременно от най-много толкова строеве, сумата от чиито лица е колкото два пъти лицето на  нападнатите.
 
