--- a/latex/items_skills_perks.tex
+++ b/latex/items_skills_perks.tex
@@ -5,9 +5,11 @@
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm}}
 мн. евтин & евтин                                   & среден                  & скъп                           & мн. скъп  \\
-щит       & меч                                     & двуръчен меч            & имение                         &           \\
+щит       & меч                                     & двуръчен меч            & имение                         & замък     \\
 брадва    & халчеста къса ризница пазаене 6 здр. 6  & боен кон                & пълна броня пазаене 15 здр. 15 &           \\
-          & нагръдник пазене 3 здр. 12              & кираса пазене 5 здр. 15 &                                & замък
+колиба    & нагръдник пазене 3 здр. 12              & кираса пазене 5 здр. 15 &                                &           \\
+куче      & къща в малък град или село              & къща в голям град       & централна къща в столицата                 \\
+          & товарен кон, магаре                     & боен кон                &
 \end{tabular}
 \subsection{Оръжия}
 %\begin{multicols}{2}
@@ -18,6 +20,15 @@
 Щети: ниски
 Свойства:  няма
 Тегло: 0.2кг
+Цен: много евтин
+
+Къс меч
+Сила: 4-10
+обсег: близък
+щети: средни
+Свойства: повратливост
+Маса: 0.8кг 
+Цена: евтин
 
 Меч 80см
 Сила: 5-12
@@ -25,6 +36,7 @@
 Щети: средни
 Свойства: повратливост
 Тегло: 1кг
+Цена: евтин
 
 Дълъг меч
 Сила: 5-12
@@ -32,6 +44,7 @@
 Щети: високи
 Свойства: повратливост
 Тегло: 2кг
+Цена: среден
 
 Дървен щит 80см
 Сила: 5-12
@@ -39,13 +52,15 @@
 Щети: ниски
 Свойства: поваляне
 Тегло: 2кг
+ЦЕна: много евтин
 
 Метателно копие
 Сила 5-12
-Обсег: (Сила)
+Обсег: (Сила) == среден
 Щети: средни
 Свойства: няма
 Тегло: 1кг
+Цена: много верин
 
 Пика
 Сила: 4-11 (две ръце)
@@ -53,59 +68,110 @@
 Щети: средни
 Свойства: няма
 Тегло: 3кг
+Цена: евтин
 
 Метателен нож
 Сила: 3-9
-Обсег: (Сила/2)
+Обсег: (Сила/2)  == къс
 Щети: ниски
 Свойства: няма
-Тегло: 0.2кг
+Маса: 0.2кг
+Цена: много евтин
 
 Арбалет без механизъм за зареждане
 Сила: 7, зарежда се два хода
 Обсег: (Сила х 2)м
 Щети: високи
 Свойства: бронебойност I
-Тегло: 3кг
+Маса: 3кг
+Цена: евтин
 
 Дървен дълъг лък
 Сила 7, зарежда се един ход
 Обсег: (Сила х 2)м
 Щети: високи
 Свойства: няма
-Тегло: 2кг
+Маса: 2кг
+Цена: евтин
 
 Арбалет с макара
 Сила: 5 необходима, 12 реална, зарежда се десет хода
 Обсег: (Сила х 2)м
 Щети: високи
 Свойства: бронебойност
-Тегло: 4кг
+Маса: 4кг
+Цена: среден
+
+Колчан 12 стрели
+Маса: 1кг
+Цена: много евтин
+
 \end{verbatim}
 %\end{multicols}
 
+\subsection{Брони}
+lorica segmenta - среден  \\
+халчеста къса броня - евтин \\
+халчеста с ръкави и пола - среден \\
+кожена - много евтин
+
+\section{Качества}
++ \\
+виждане на тъмно \\
+\\
+- \\
+куцане (1/4 скорост)  \\
+слаб слух  \\
+нелогичен панически страх от паяци/змии/широки отркити пространства/тесни затворени пространства/височини                                     \\
+късогледство/далекогледство                                                                                                                   \\
+нелогично неустоимо приличане към огън/силно психоактивно вещество/сексъално към деца/изричане на лъжи/физически конфликт                     \\
+обезобразено лице                                                                                                                             \\
+малодушие                                                                                                                                     \\
+заблуда (A dellusion is a fixed belief that is either false, fanciful, or derived form deception, held despite evidence to the contrary.)     \\
+тревожност (параноя)                                                                                                                          \\
+мързел (безинициативност)                                                                                                                     \\
+асоциалност              \\
+крайно скъперничество    \\
+крайна срамежливост      \\
+крайна самоувереност     \\
+краен песимизъм          \\
+наднормено тегло         \\
+
 \section{Умения}
 \subsection{Общуване}
-Лъжене (Чар)
-Сплашване (Чар)
-Изтезаване/Разпитване (Чар)
-Емпатия (Чар)
-Четене по устните (Чар)
-Молене (Чар)
+Лъжене (Чар)                      \\
+Сплашване (Чар)                   \\
+Изтезаване/Разпитване (Чар)       \\
+Емпатия (Чар)                     \\
+Четене по устните (Чар)           \\
+Молене (Чар)                      \\
 
 \subsection{Академични}
 Език* (Ум)
 Наука* (Ум)
 
-\subsection(Схватки)
+\subsection{Схватки}
 Оръжие* (Ловкост)
 Военна машина* (Ум)
 
+\subsection{Придвижване}
+Плуване (Сила)
+Кaтерене (Сила)
+
 \subsection{Магия}
-Огън (Ум)(0 ниво - пламва плат, 1 ниво - пламва греда, 2 ниво - пламва барака, 3 ниво ниво - пламва квартал, 4 ниво - пламва пламва град или дворец, 5 ниво - разтапя град, 6 ниво - разтапя замък, 7 ниво - подпалва кралство, 8 ниво - изпепелява кралство в горяща магма)
-Лекуване (Ум) - лекуване по щети Ум средни на зар.
-Вятър (Ум) - мъгла, ниво 2 мълния щяти по Ум, високи.
-Гадаене (Ум) - телевизор
-Превръщане (Ум) - на предмети или същества в други.
-Отвъд (Ум) - разговаряне с души, вдигане на мъртви.
-Създаване - храна и вода, предмети и създания.
+Огън (Ум)(0 ниво - пламва плат, 1 ниво - пламва греда, 2 ниво - пламва барака, 3 ниво ниво - пламва квартал, 4 ниво - пламва пламва град или дворец, 5 ниво - разтапя град, 6 ниво - разтапя замък, 7 ниво - подпалва кралство, 8 ниво - изпепелява кралство в горяща магма) \\
+Лекуване (Ум) - лекуване по щети Ум средни на зар.      \\
+Вятър (Ум) - мъгла, ниво 2 мълния щяти по Ум, високи.   \\
+Гадаене (Ум) - телевизор                                \\
+Превръщане (Ум) - на предмети или същества в други.     \\
+Отвъд (Ум) - разговаряне с души, вдигане на мъртви.     \\
+Създаване - храна и вода, предмети и създания.          \\
+
+\section{Епични провали}
+При атака с оръжие           \\
+- да го изтърве              \\
+- да се сепъне               \\
+- да се наръга               \\
+- да се счупи                \\
+- да удари някого другиго    \\
+- ми нищо не се случва       \\
