--- a/latex/magic_system.tex
+++ b/latex/magic_system.tex
@@ -1,1 +1,5 @@
 \section{Ползване на магия}
+Ниво на магията -> брой зарове мана.  \\
+Ако това е повече от наличните -> ЖТ. \\
+МТ 1/ден.                             \\
+МТ = ниво на умението.                \\
