Spells were forgotten out of the book.

--- a/latex/spells.tex
+++ b/latex/spells.tex
@@ -1,20 +1,14 @@
 \section{Заклинания} 
 
-% template
-\textbf{}
-\underline{0 ниво}
-
-\underline{1 ниво}
-
-\underline{2 ниво}
-
-\underline{3 ниво}
-
-\underline{4 ниво}
-
-\underline{5 ниво}
-
-\underline{6 ниво}
+% Template for spell powers.
+%\textbf{}
+%\underline{0 ниво}
+%\underline{1 ниво}
+%\underline{2 ниво}
+%\underline{3 ниво}
+%\underline{4 ниво}
+%\underline{5 ниво}
+%\underline{6 ниво}
 
 
 Жизнена енергия 
@@ -37,7 +31,7 @@
 \underline{5 ниво}
 - възкресяване по спомен
 
-\underscore{6 ниво}
+\underline{6 ниво}
 - възкресяване по описание
 - превръщане в лич
 
