--- a/latex/items_skills_perks.tex
+++ b/latex/items_skills_perks.tex
@@ -11,103 +11,30 @@
 куче      & къща в малък град или село              & къща в голям град       & централна къща в столицата                 \\
           & товарен кон, магаре                     & боен кон                &
 \end{tabular}
+
 \subsection{Оръжия}
-%\begin{multicols}{2}
-\begin{verbatim}
-Нож
-Сила: 3-9
-Обсег: близък
-Щети: ниски
-Свойства:  няма
-Тегло: 0.2кг
-Цен: много евтин
+\begin{tabular}{p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm}}
+Наименование          & Необходима Сила      & Обсег      & Щети       & Свойства       & Маса  & Стойност         \\
+% Едноръчни оръжия.
+Нож                   & 3-9                  & близък     & ниски      & -              & 0.2кг & много евтин  \\
+Къс меч               & 4-10                 & близък     & средни     & повратливост   & 1кг   & евтин        \\
+Меч 80см              & 5-12                 & среден     & средни     & повратливост   & 1кг   & евтин        \\
 
-Къс меч
-Сила: 4-10
-обсег: близък
-щети: средни
-Свойства: повратливост
-Маса: 0.8кг 
-Цена: евтин
+% Двуръчни оръжия.
+Пика (две ръце)       & 4-11                 & отдалечен  & средни     & -              & 3кг   & евтин        \\
+Дълъг меч (две ръце)  & 5-12                 & дълъг      & високи     & повратливост   & 2кг   & среден       \\
 
-Меч 80см
-Сила: 5-12
-Обсег: среден
-Щети: средни
-Свойства: повратливост
-Тегло: 1кг
-Цена: евтин
+% Отдалечени атаки.
+Метателен нож         & 3-9                  & (Сила/2)   & ниски      & -              & 0.2кг & много евтин  \\
+Метателно копие       & 5-12                 & (Сила)     & средни     & -              & 1кг   & много евтин  \\
+Дървен дълъг лък      & 7, зарежда се 1 ход  & (Сила х 2) & високи     & -              & 2кг   & евтин        \\
+Арбалет без механизъм & 7, зарежда се 2 хода & (Сила х 2) & високи     & бронебойност I & 3кг   & евтин        \\
+Арбалет с макара      & 5 необходима, 12 реална, зарежда се 10 хода & (Сила х 2) & високи & бронебойност II & 4кг & среден\\
+Колчан 12 стрели      & -                    & -          & -          & -              & 1кг   & много евтин  \\
 
-Дълъг меч
-Сила: 5-12
-Обсег: дълъг
-Щети: високи
-Свойства: повратливост
-Тегло: 2кг
-Цена: среден
-
-Дървен щит 80см
-Сила: 5-12
-Обсег: близък
-Щети: ниски
-Свойства: поваляне
-Тегло: 2кг
-ЦЕна: много евтин
-
-Метателно копие
-Сила 5-12
-Обсег: (Сила) == среден
-Щети: средни
-Свойства: няма
-Тегло: 1кг
-Цена: много верин
-
-Пика
-Сила: 4-11 (две ръце)
-Обсег: отдалечен
-Щети: средни
-Свойства: няма
-Тегло: 3кг
-Цена: евтин
-
-Метателен нож
-Сила: 3-9
-Обсег: (Сила/2)  == къс
-Щети: ниски
-Свойства: няма
-Маса: 0.2кг
-Цена: много евтин
-
-Арбалет без механизъм за зареждане
-Сила: 7, зарежда се два хода
-Обсег: (Сила х 2)м
-Щети: високи
-Свойства: бронебойност I
-Маса: 3кг
-Цена: евтин
-
-Дървен дълъг лък
-Сила 7, зарежда се един ход
-Обсег: (Сила х 2)м
-Щети: високи
-Свойства: няма
-Маса: 2кг
-Цена: евтин
-
-Арбалет с макара
-Сила: 5 необходима, 12 реална, зарежда се десет хода
-Обсег: (Сила х 2)м
-Щети: високи
-Свойства: бронебойност
-Маса: 4кг
-Цена: среден
-
-Колчан 12 стрели
-Маса: 1кг
-Цена: много евтин
-
-\end{verbatim}
-%\end{multicols}
+% Щитове.
+Дървен щит 80см       & 5-12                 & близък     & ниски      & поваляне       & 2кг   & много евтин  \\
+\end{tabular}
 
 \subsection{Брони}
 lorica segmenta - среден  \\
