Reverted some bolding.

--- a/latex/character_creation_and_evolution.tex
+++ b/latex/character_creation_and_evolution.tex
@@ -23,7 +23,7 @@
 
 \subsection{Умения}
 Начални точки и развиване  \\
-С \textit{Ум * 5} разполагаш, за да разпределиш по умения.
+С \textit{(Ум * 5)} точки разполагаш, за да разпределиш по умения.
 Уменията, също така, се повишават с точки опит по време на игра.
 \\
 \\
