Actually, I like it best italics.

--- a/latex/combat_system.tex
+++ b/latex/combat_system.tex
@@ -78,12 +78,12 @@
 
 Също така, оръжията могат да имат някои от следните свойства.
 \begin{enumerate}
-\item{повратливост (обикновено мечове; покрива всички по-близки дистанции от максимлната)}
-\item{бронебойност I (чукове или леки клинове, като стрели и копия; намаля абсорбацията на половина)}
-\item{бронебойност II (клиновидни, тежки остриета; намаля абсорбацията на $\frac1 4$)}
-\item{трудно за вадене (не може да се извади от пробита проня по време на битка; не може да се извади от небронирана плът, ако зарът за щета е бил положителен; при вадене лечитеслтво с/у щетите; ако не успее се  нанасят още толкова щети, колкото първоначално)}
-\item{поваляне (обикновено алебарди; наместо щети, атаката може да бъде обявена, че поваля опонента. Ако целта е конник в качествено бойно седло, -5 на атака)}
-\item{обезоръжаване (обикновено меч или щит; при успешна защита има шанс оръжието на врага да е уловено в комплексния гард или шипове на "бос"a на щит)}
+\item{\textit{повратливост} (обикновено мечове; покрива всички по-близки дистанции от максимлната)}
+\item{\textit{бронебойност I} (чукове или леки клинове, като стрели и копия; намаля абсорбацията на половина)}
+\item{\textit{бронебойност II} (клиновидни, тежки остриета; намаля абсорбацията на $\frac1 4$)}
+\item{\textit{трудно за вадене} (не може да се извади от пробита проня по време на битка; не може да се извади от небронирана плът, ако зарът за щета е бил положителен; при вадене лечитеслтво с/у щетите; ако не успее се  нанасят още толкова щети, колкото първоначално)}
+\item{\textit{поваляне} (обикновено алебарди; наместо щети, атаката може да бъде обявена, че поваля опонента. Ако целта е конник в качествено бойно седло, -5 на атака)}
+\item{\textit{обезоръжаване} (обикновено меч или щит; при успешна защита има шанс оръжието на врага да е уловено в комплексния гард или шипове на "бос"a на щит)}
 \end{enumerate}
 
 \subsection{Брони}
