--- a/latex/items_skills_perks.tex
+++ b/latex/items_skills_perks.tex
@@ -43,26 +43,32 @@ lorica segmenta - среден  \\
 кожена - много евтин
 
 \section{Качества}
-+ \\
-виждане на тъмно \\
-\\
-- \\
-куцане (1/4 скорост)  \\
-слаб слух  \\
-нелогичен панически страх от паяци/змии/широки отркити пространства/тесни затворени пространства/височини                                     \\
-късогледство/далекогледство                                                                                                                   \\
-нелогично неустоимо приличане към огън/силно психоактивно вещество/сексъално към деца/изричане на лъжи/физически конфликт                     \\
-обезобразено лице                                                                                                                             \\
-малодушие                                                                                                                                     \\
-заблуда (A dellusion is a fixed belief that is either false, fanciful, or derived form deception, held despite evidence to the contrary.)     \\
-тревожност (параноя)                                                                                                                          \\
-мързел (безинициативност)                                                                                                                     \\
-асоциалност              \\
-крайно скъперничество    \\
-крайна срамежливост      \\
-крайна самоувереност     \\
-краен песимизъм          \\
-наднормено тегло         \\
+
+\textbf{Положителни}
+\begin{itemize}
+\item{виждане в тъмнина}
+\end{itemize}
+
+\vspace{0.7cm}
+\textbf{Отрицателни}
+\begin{itemize}
+\item{куцане (1/4 скорост)}
+\item{слаб слух}
+\item{нелогичен панически страх от паяци/змии/широки отркити пространства/тесни затворени пространства/височини}
+\item{късогледство/далекогледство}
+\item{нелогично неустоимо приличане към огън/силно психоактивно вещество/сексъално към деца/изричане на лъжи/физически конфликт}
+\item{обезобразено лице}
+\item{малодушие}
+\item{заблуда (A dellusion is a fixed belief that is either false, fanciful, or derived form deception, held despite evidence to the contrary.)}
+\item{тревожност (параноя)}
+\item{мързел (безинициативност)}
+\item{асоциалност}
+\item{крайно скъперничество}
+\item{крайна срамежливост}
+\item{крайна самоувереност}
+\item{краен песимизъм}
+\item{наднормено тегло}
+\end{itemize}
 
 \section{Умения}
 \subsection{Общуване}
