--- a/latex/magic_system.tex
+++ b/latex/magic_system.tex
@@ -104,6 +104,15 @@
 
 
 
+Огън (Ум)(0 ниво - пламва плат, 1 ниво - пламва греда, 2 ниво - пламва барака, 3 ниво ниво - пламва квартал, 4 ниво - пламва пламва град или дворец, 5 ниво - разтапя град, 6 ниво - разтапя замък, 7 ниво - подпалва кралство, 8 ниво - изпепелява кралство в горяща магма) \\
+Лекуване (Ум) - лекуване по щети Ум средни на зар.      \\
+Вятър (Ум) - мъгла, ниво 2 мълния щяти по Ум, високи.   \\
+Гадаене (Ум) - телевизор                                \\
+Превръщане (Ум) - на предмети или същества в други.     \\
+Отвъд (Ум) - разговаряне с души, вдигане на мъртви.     \\
+Създаване - храна и вода, предмети и създания.          \\
+
+
 
 
 
