--- a/latex/items_skills_perks.tex
+++ b/latex/items_skills_perks.tex
@@ -1,5 +1,10 @@
 \section{Предмети}
 \subsection{Валути}
+Абстрактна валута: много евтиn, евтин, среден, скъп, много скъп; няма преобразувания.  \\
+Луседом Терея: 100 имперски крони = 10 имперски рояла = 1 имперски соверен             \\
+Каланор: 100 кралски крони = 10 кралси рояла = 1 кралски соверен                       \\
+Сзал Тлея: 13 тъмни монети = 1 черна монета; 900 черни монети = 1 дълбока монета       \\
+Креол: 1900 монети за храна = 1 монета за оръжие; 69 монети за оръжие = 1 монета за дом\\
 \subsection{Заплащане}
 \subsection{Сгради}
 \rowcolors{1}{white}{lightgray}
