Spells look a little more reasonably. Still suck, tho.

--- a/latex/magic_system.tex
+++ b/latex/magic_system.tex
@@ -9,105 +9,157 @@
 \subsection{Заклинания} 
 
 % Template for spell powers.
-%\textbf{}             % Small heading.
-%\underline{0 ниво}    % Underlined, unindented.
-% - example            % indented bullet points.
-%\underline{1 ниво}
-%\underline{2 ниво}
-%\underline{3 ниво}
-%\underline{4 ниво}
-%\underline{5 ниво}
-%\underline{6 ниво}
+%\vspace{1cm}
+%\textbf{}            \\  % Small heading.
+%\underline{0 ниво}   \\  % Underlined, unindented.
+%\begin{itemize}
+  %\item{нишо}
+%\end{itemize}
+
+%\underline{1 ниво}  \\
+%\begin{itemize}
+  %\item{нишо}
+%\end{itemize}
+
+%\underline{2 ниво}  \\
+%\begin{itemize}
+  %\item{нишо}
+%\end{itemize}
+
+%\underline{3 ниво}  \\
+%\begin{itemize}
+  %\item{нишо}
+%\end{itemize}
+
+%\underline{4 ниво}  \\
+%\begin{itemize}
+  %\item{нишо}
+%\end{itemize}
+
+%\underline{5 ниво}  \\
+%\begin{itemize}
+  %\item{нишо}
+%\end{itemize}
+
+%\underline{6 ниво}  \\
+%\begin{itemize}
+  %\item{нишо}
+%\end{itemize}
 
 
-Жизнена енергия 
-\underline{0 ниво} 
-\underline{1 ниво}
-* укротяване на звяр
-* усещане за немъртви
-* лекуване (умение ЖТ)
+\textbf{Жизнена енергия}  \\ 
+\underline{0 ниво} \\
+\underline{1 ниво} \\
+\begin{itemize}
+  \item{укротяване на звяр}
+  \item{усещане за немъртви}
+  \item{лекуване (умение ЖТ)}
+\end{itemize}
 
 \underline{2 ниво}
-- изтляване - съществото умира след месец  докато се поддържа магията
-- скелетен слуга - <умение + д6*> по показатели, следва вербални команди
+\begin{itemize}
+  \item{изтляване - съществото умира след месец  докато се поддържа магията}
+  \item{скелетен слуга - <умение + д6*> по показатели, следва вербални команди}
+\end{itemize}
 
 \underline{3 ниво}
-- убиване - <умение> с/у <сила на опонента>
+\begin{itemize}
+\item{убиване - <умение> с/у <сила на опонента>}
+\end{itemize}
 
 \underline{4 ниво}
-- възкресяване на тяло
+\begin{itemize}
+\item{възкресяване на тяло}
+\end{itemize}
 
 \underline{5 ниво}
-- възкресяване по спомен
+\begin{itemize}
+\item{възкресяване по спомен}
+\end{itemize}
 
 \underline{6 ниво}
-- възкресяване по описание
-- превръщане в лич
+\begin{itemize}
+\item{възкресяване по описание}
+\item{превръщане в лич}
+\end{itemize}
 
 % template
-\textbf{Гадание}
-\underline{0 ниво}
-- усещане позицията на предмет след докосване, до няколко километра
-- усещане името на същество.
-- виждане на далеч
-- светлина
+\vspace{1cm}
+\textbf{Гадание}  \\
+\underline{0 ниво}  \\
+\begin{itemize}
+  \item{усещане позицията на предмет след докосване, до няколко километра}
+  \item{усещане името на същество}
+  \item{виждане на далеч}
+  \item{светлина}
+\end{itemize}
 
-\underline{1 ниво}
-- живо оръжие (буравенето става равно на умението гадаене)
-- уцелване отвъд прикритие (атака = умение)
-- виждане през стени
-- усещане на лъжи
-- виждане в тъмнина
-- посока към най-близкия град/път/река
+\underline{1 ниво}  \\
+\begin{itemize}
+  \item{живо оръжие (буравенето става равно на умението гадаене)}
+  \item{уцелване отвъд прикритие (атака = умение)}
+  \item{виждане през стени}
+  \item{усещане на лъжи}
+  \item{виждане в тъмнина}
+  \item{посока към най-близкия град/път/река}
+\end{itemize}
 
-\underline{2 ниво}
-- предсказване на удари - +умение към боравене
+\underline{2 ниво} \\
+\begin{itemize}
+\item{предсказване на удари - +умение към боравене}
+\end{itemize}
 
-\underline{3 ниво}
+\underline{3 ниво} \\
 
-\underline{4 ниво}
+\underline{4 ниво} \\
 
-\underline{5 ниво}
+\underline{5 ниво} \\
 
-\underline{6 ниво}
+\underline{6 ниво} \\
 
 
 
 % template
-\textbf{Огън}
-\underline{0 ниво}
-- запалване на много свещи
-- запалване на дрехи
-- предпазване от жега
+\vspace{1cm}
+\textbf{Огън}  \\
+\underline{0 ниво}  \\
+\begin{itemize}
+  \item{запалване на много свещи}
+  \item{запалване на дрехи}
+  \item{предпазване от жега}
+\end{itemize}
 
-\underline{1 ниво}
-- огнено копие - Щ = умение, високи
-- палене на колиба
-- запалване на човек
-- защита от огън
+\underline{1 ниво}  \\
+\begin{itemize}
+  \item{огнено копие - Щ = умение, високи}
+  \item{палене на колиба}
+  \item{запалване на човек}
+  \item{защита от огън}
+\end{itemize}
 
 \underline{2 ниво}
-- огнено кълбо - <умение> радиус
-- запалване на тълпа
-- защито от огън на тълпа
+\begin{itemize}
+  \item{огнено кълбо - <умение> радиус}
+  \item{запалване на тълпа}
+  \item{защито от огън на тълпа}
+\end{itemize}
 
 \underline{3 ниво}
-- запалване на град
-- езеро от лава
-- защита от огън на град
+\begin{itemize}
+  \item{запалване на град}
+  \item{езеро от лава}
+  \item{защита от огън на град}
+\end{itemize}
 
-\underline{4 ниво}
+\underline{4 ниво}  \\
 
-\underline{5 ниво}
+\underline{5 ниво}  \\
 
-\underline{6 ниво}
+\underline{6 ниво}  \\
 
 
-
-Огън (Ум)(0 ниво - пламва плат, 1 ниво - пламва греда, 2 ниво - пламва барака, 3 ниво ниво - пламва квартал, 4 ниво - пламва пламва град или дворец, 5 ниво - разтапя град, 6 ниво - разтапя замък, 7 ниво - подпалва кралство, 8 ниво - изпепелява кралство в горяща магма) \\
-Лекуване (Ум) - лекуване по щети Ум средни на зар.      \\
+Бъдещи идеи:  \\
 Вятър (Ум) - мъгла, ниво 2 мълния щяти по Ум, високи.   \\
-Гадаене (Ум) - телевизор                                \\
 Превръщане (Ум) - на предмети или същества в други.     \\
 Отвъд (Ум) - разговаряне с души, вдигане на мъртви.     \\
 Създаване - храна и вода, предмети и създания.          \\
