items_skills_perks split into separate files.

--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -43,6 +43,8 @@
 \include{character_creation_and_evolution}
 \include{combat_system}
 \include{magic_system}
-\include{items_skills_perks}
+\include{items}
+\include{skills}
+\include{perks}
 \tableofcontents
 \end{document}
