--- a/latex/perks.tex
+++ b/latex/perks.tex
@@ -3,6 +3,7 @@
 \textbf{Положителни}
 \begin{itemize}
 \item{виждане в тъмнина}
+\item{Приятел - съюзник, влиятелна личност или организация, което дължи услуги на персоанжа}
 \end{itemize}
 
 \vspace{0.7cm}
@@ -24,5 +25,6 @@
 \item{крайна самоувереност}
 \item{краен песимизъм}
 \item{наднормено тегло}
+\item{Враг - индивид или организация, готови да отделят ресутрси само за да навредят на персонажа}
 \end{itemize}
 
