Shorter fiel names.

--- a/latex/elementaris.tex
+++ b/latex/elementaris.tex
@@ -42,7 +42,7 @@
 \input{titlepage.tex}
 \include{character_creation_and_evolution}
 \include{combat_system}
-\include{magic_system}
+\include{magic}
 \include{items}
 \include{skills}
 \include{perks}
