Minor changes on items

--- a/latex/items.tex
+++ b/latex/items.tex
@@ -9,12 +9,12 @@
 \subsection{Сгради}
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{p{3cm} | p{3cm} | p{3cm} | p{3cm} | p{3cm}}
-мн. евтин & евтин                                   & среден                  & скъп                           & мн. скъп  \\
-щит       & меч                                     & двуръчен меч            & имение                         & замък     \\
-брадва    & халчеста къса ризница пазаене 6 здр. 6  & боен кон                & пълна броня пазаене 15 здр. 15 &           \\
-колиба    & нагръдник пазене 3 здр. 12              & кираса пазене 5 здр. 15 &                                &           \\
-куче      & къща в малък град или село              & къща в голям град       & централна къща в столицата                 \\
-          & товарен кон, магаре                     & боен кон                &
+мн. евтин & евтин                                   & среден                   & скъп                           & мн. скъп  \\
+щит       & меч                                     & двуръчен меч             & имение                         & замък     \\
+брадва    & халчеста къса ризница пазаене 6 здр. 6  & боен кон                 & пълна броня пазаене 15 здр. 15 &           \\
+йуче      & кован нагръдник                         & качествена кираса и пола & качествена пълна броня         &           \\
+колиба    & къща в малък град или село              & къща в голям град        & централна къща в столицата                 \\
+          & магаре С30                              & боен кон                 &
 \end{tabular}
 
 \subsection{Оръжия}
