--- a/latex/skills.tex
+++ b/latex/skills.tex
@@ -9,18 +9,26 @@
 Молене (Чар)                      \\
 
 \subsection{Академични}
-Език* (Ум)
-Наука* (Ум)
+Език* (Ум)                        \\
+Наука* (Ум)                       \\
+Тактика
 
 \subsection{Схватки}
-Оръжие* (Ловкост)
-Военна машина* (Ум)
+Оръжие* (Ловкост)                 \\
+Военна машина* (Ум)               \\
 
 \subsection{Придвижване}
-Плуване (Сила)
-Кaтерене (Сила)
+Плуване (Сила)                    \\
+Кaтерене (Сила)                   \\
 
-\section{Епични провали}
+\subsection{Занаяти}
+Билкарсто (Ум)                    \\
+
+\subsection{Епични провали}
+Ако при мятане на д6* се падне -5 или +6, се мята отново.
+Ако случайно се падне същото число, то се взема предивд и се продължава с мятането.
+Ако крайният резултат е <0, имаме епичен провал, честито!  \\ 
+
 При атака с оръжие           \\
 - да го изтърве              \\
 - да се сепъне               \\
